@@ -196,9 +196,9 @@ dependencies {
   implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: reformLoggingVersion
   implementation group: 'com.github.hmcts.java-logging', name: 'logging-appinsights', version: reformLoggingVersion
   implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '7.4'
-  implementation 'com.networknt:json-schema-validator:1.0.83'
   implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.1'
   implementation group: 'com.github.hmcts', name: 'pip-data-models', version: '2.1.18'
+  implementation 'com.networknt:json-schema-validator:1.3.0'
   implementation 'org.springframework.boot:spring-boot-starter-validation'
   implementation 'org.springframework.boot:spring-boot-starter-jdbc'
   implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -228,12 +228,19 @@ dependencies {
   testImplementation group: 'org.springframework.security', name: 'spring-security-test'
   testImplementation group: 'io.github.hakky54', name: 'logcaptor', version: '2.9.2'
   testImplementation group: 'org.apiguardian', name: 'apiguardian-api', version: '1.1.2'
+  testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.4.0', classifier: 'all'
 
   functionalTestImplementation sourceSets.main.runtimeClasspath
   functionalTestImplementation sourceSets.test.runtimeClasspath
 
   smokeTestImplementation sourceSets.main.runtimeClasspath
   smokeTestImplementation sourceSets.test.runtimeClasspath
+}
+
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 bootJar {
